--- a/test/fixtures/jobs.yml
+++ b/test/fixtures/jobs.yml
@@ -1,13 +1,15 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  title: MyString
-  salary: 100
+  title: "Developer"
+  salary_per_hour: 100
   languages:  ["English", "German"]
-  shift_dates: [1]
+  shift_dates: 2
+  user_id: 1
 
 two:
   title: MyString
-  salary: 100
+  salary_per_hour: 100
   languages: ["English"]
-  shift_dates: [1,3,5]
+  shift_dates: 1
+  user_id: 1
